[package]
name = "music-algorithm"
version = "0.1.0"
edition.workspace = true
authors = ["Qiaosen Bai <baiqiaosen@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "=0.4.21"
axstd = { workspace = true, optional = true, features = ["alloc"] }
libm = "0.2"
num-complex = { version = "0.4", default-features = false }
